genetic algorithm complete

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 application {
     // Define the main class for the application.
     if(!project.hasProperty('main')) {
-        mainClass = 'cs2.hello.App'
+        mainClass = 'cs2.AIP.Playground'
     } else {
         mainClass = project.findProperty('main').toString()
     }
